--- a/portal/developer-portal/css/HPE_css_version.css
+++ b/portal/developer-portal/css/HPE_css_version.css
@@ -1,10 +1,29 @@
 /*
-Hewlett-Packard Company
-Copyright 2015-2018 Hewlett Packard Enterprise Development LP
-Written for Hewlett Packard Enterprise, Knowledge Management
-
-CHANGES HEREIN MADE TO CRAY PUBS ZOOMIN PORTAL SITE TO ADOPT HPE UI CHANGES FOR BUS. DAY 1.
-
+*
+*  MIT License
+*
+*  (C) Copyright [2015-2021] Hewlett Packard Enterprise Development LP
+*
+*  Permission is hereby granted, free of charge, to any person obtaining a
+*  copy of this software and associated documentation files (the "Software"),
+*  to deal in the Software without restriction, including without limitation
+*  the rights to use, copy, modify, merge, publish, distribute, sublicense,
+*  and/or sell copies of the Software, and to permit persons to whom the
+*  Software is furnished to do so, subject to the following conditions:
+*
+*  The above copyright notice and this permission notice shall be included
+*  in all copies or substantial portions of the Software.
+*
+*  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+*  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+*  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL
+*  THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR
+*  OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE,
+*  ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
+*  OTHER DEALINGS IN THE SOFTWARE.
+*
+*  Written for Hewlett Packard Enterprise, Knowledge Management
+*  CHANGES HEREIN MADE TO CRAY PUBS ZOOMIN PORTAL SITE TO ADOPT HPE UI CHANGES FOR BUS. DAY 1.
 */
 
 /* ----------------------------------------- */
@@ -45,13 +64,11 @@ CHANGES HEREIN MADE TO CRAY PUBS ZOOMIN PORTAL SITE TO ADOPT HPE UI CHANGES FOR 
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
     
-
 /* Metric fonts */
 /* Change default font to MetricHPE */
 html:lang(en-us), /* english us */ {
 font-family: "Metric", Arial, sans-serif;
 }
-
 
 /* --------------------------------------------- */
 /* --------------------------------------------- */
@@ -63,7 +80,6 @@ font-family: "Metric", Arial, sans-serif;
 #nav > a.zDocsLogo > img.logo.d-none.d-lg-inline-block {
     height:   120px;
 }
-
 
 /* Change color of portal page header */
 #root > div.zDocsLayout > main > div.zDocsHeader {
@@ -121,7 +137,6 @@ div.zDocsSearchBoxSubmitButton button {
     background-color:  #01a982!important;
 }
 
-
 /* Change Color of Footer Top Border to HPE Green */
 #root > div.zDocsLayout > footer {
     border-top:  15px solid #01a982!important;
@@ -171,7 +186,6 @@ div.wm {
 padding:  27px 14px 16px!important;
 }
 
-
 /* ------------------------------------------------------ */
 /* ------------------------------------------------------ */
 /* THIS SECTION CHANGES VISUAL ELEMENTS IN CONTENT PAGES  */
@@ -183,8 +197,6 @@ padding:  27px 14px 16px!important;
 pre.codeblock, pre.screen  {
   white-space: break-spaces;
 }
-
-
 
 /* Ensure spacing above an important note */
 div.note.important.note_important {
@@ -216,7 +228,6 @@ div.note.caution.note_caution {
     border-bottom: 2px solid #01a982;
 }
 
-
 /* Ensure spacing above danger note */
 div.note.danger.note_danger {
  /*   margin: 12px 0 12px;   */
@@ -247,8 +258,6 @@ div.note.note.note_note {
     border-bottom: 2px solid #01a982;
 }
 
-
-
 /* Set note intro word to bold */
 span.note__title {
     font-weight:  700!important;
@@ -263,7 +272,6 @@ span.note__title {
 div.articleContainer {
     line-height:  1.25!important;
 }
-
 
 /* Grouping of CSS code for monospaced fonts  */
 
@@ -389,7 +397,6 @@ div.body > div.tasklabel > h2.sectiontitle.tasklabel {
 div.body > section.section.postreq > div.tasklabel > h2.sectiontitle.tasklabel {
     font-size:  1rem;
 }
-
   
 /* Change spacing between <p> elements  */
 p.p {
@@ -465,8 +472,6 @@ ol.ol.steps  li.step.stepexpand  div.itemgroup.stepresult {
 ol.ol.substeps {
     margin-left:  5px!important;
 }
-
-
 
 /* Make font bold when wintitle element wrapped in a <p> element */ 
 span.keyword.wintitle {
@@ -570,8 +575,6 @@ figure.fig.fignone {
     padding:  8px;
 }    
 
-
-
 /* --------------------------------------------- */
 /* --------------------------------------------- */
 /*  SECTION OF CHANGES TO HOME PAGE              */
@@ -590,7 +593,6 @@ figure.fig.fignone {
 #zDocsContent > div > div > div {
     padding: 16px 50px;
 }
-
 
 /* Adjust spacing between sub-category boxes and heading above them */
 #zDocsContent > div > div > p {
@@ -625,7 +627,6 @@ tr td.align-center {
     color: #01a982;
 }    
 
-
 /* Change Font on Category Titles to MetricHPE */
 #content > div > div > div > div.zDocsHomeCategories > div.zDocsHomeCategoriesHeader > h2 {
      font-family: "Metric", Arial, sans-serif;  
@@ -635,7 +636,6 @@ tr td.align-center {
 #navbarHead > div > ul > li > a {
     font-family: "Metric", Arial, sans-serif;
 }
-
 
 #content > div > div > div > div.zDocsHomeCategories > div.zDocsHomeCategoriesInner > div > div > div.zDocsCategoryContent > h5 > a {
     font-family: "Metric", Arial, sans-serif;
@@ -649,7 +649,6 @@ tr td.align-center {
     font-size:  1rem!important;
 }  
  
-
 /*  Change Footer Font to MetricHPE */
 #root > div.zDocsLayout > footer > ul > li {
     font-family: "Metric", Arial, sans-serif;
@@ -670,8 +669,6 @@ tr td.align-center {
 #content > div > div > div > div.zDocsHomeCategories > div.zDocsHomeCategoriesHeader > h2 {
     border-bottom: 4px solid #01a982!important;
 }
-
-
 
 /* --------------------------------------------- */
 /* --------------------------------------------- */
@@ -714,7 +711,6 @@ tr td.align-center {
     margin-top:  3px;
 }
  
-
 /* Change font for Library heading to MetricHPE */
 #zDocsContent > div.zDocsBundlePageResultsWrapper > div.zDocsBundlePageResultsInner > div:nth-child(1) > div.zDocsBundlePageResultsInnerContentTitle > div > h3 {
     font-family: "Metric", Arial, sans-serif!important;    
@@ -759,7 +755,6 @@ div.date > span {
     font-weight:  600;
 }
 
-
 /* ------------------------------------------------- */
 /* ------------------------------------------------- */
 /*  SECTION OF CHANGES TO TOPIC SEARCH RESULTS PAGES */
@@ -772,7 +767,6 @@ div.date > span {
 #content > div > div > div.zDocsSearchPageResults > div.zDocsSearchPageResultsHead > div > div > span:nth-child(1) > svg.ico-angle-arrow-right.d-none.d-lg-inline-block {
     color: #01a982;
 }
-
 
 /* Change font on title for Search results page to MetricHPE */
 #zDocsContent > div.zDocsSearchPageResultsInner > div > h2 {
@@ -937,7 +931,6 @@ div.date > span {
     font-weight: 600;
 }
 
-
 /* Adjust spacing of line underneath My Collections Heading */
 #my-collections-tab:after {
     margin-top:  20px;
@@ -1080,12 +1073,6 @@ div.zDocsMyDocsTocCollectionItemActions > button.zDocsCollectionActionsMenuToggl
     color: #333 !important;
 } 
 
-
-
-
-
-
-
 /* --------------------------------------------- */
 /* --------------------------------------------- */
 /*  SECTION OF CHANGES TO TOPIC CONTENT PAGES    */
@@ -1107,7 +1094,6 @@ div.zDocsMyDocsTocCollectionItemActions > button.zDocsCollectionActionsMenuToggl
 #zDocsContent > div.articleHead > h2 {
     font-family: "Metric", Arial, sans-serif;  
 }
-
 
 article > div.articleHead > h2 {
     font-family: "Metric", Arial, sans-serif!important;
@@ -1163,7 +1149,6 @@ article > div.articleHead > h2 {
     padding:  16px 10px;
 }
 
-
 /* Change tag colors on content pages */
 #ico-tag > path {
     color: #5d6369;
@@ -1180,8 +1165,6 @@ article > div.articleHead > h2 {
     color:  #333;
     font-weight:  700!important;
 }
-    
-
 
 /* Change Font on Related Content Sidebar Heading */
 #zDocsContent > div.articleBody > div.zDocsSideBoxes > div > h5 {
@@ -1264,4 +1247,3 @@ main article div.body.taskbody ol.ol.steps {
 div.note.important.note_important ol.ol {
     margin-left:  5px!important;
 }
-
