update hugo doc generation

--- a/docs/hugo/docs-uan/themes/hugo-theme-learn/layouts/partials/header.html
+++ b/docs/hugo/docs-uan/themes/hugo-theme-learn/layouts/partials/header.html
@@ -97,6 +97,7 @@
               {{ if or (eq .Kind "taxonomy") (eq .Kind "term") }}
                 {{.Data.Singular}} ::
               {{ end }}
+              {{.Title}}
             </h1>
           {{end}}
 
