--- a/docs/hugo/docs-uan/themes/hugo-theme-learn/layouts/partials/menu.html
+++ b/docs/hugo/docs-uan/themes/hugo-theme-learn/layouts/partials/menu.html
@@ -6,14 +6,59 @@
     <div id="header">
       {{ partial "logo.html" . }}
     </div>
+    {{if not .Site.Params.disableSearch}}
+        {{ partial "search.html" . }}
+    {{end}}
+  </div>
+  {{if not .Site.Params.disableLandingPageButton }}
+    <section id="homelinks">
+      <ul>
+        <li>
+            <a class="padding" href='{{ (cond (and (ne .Site.Params.landingPageURL nil) (.Site.IsMultiLingual)) .Site.Params.landingPageURL "/") }}'>{{ safeHTML (cond (ne .Site.Params.landingPageName nil) .Site.Params.landingPageName "<i class='fas fa-home'></i> Home") }}</a>
+        </li>
+      </ul>
+    </section>
+  {{end}}
+
+    <div class="highlightable">
+    <ul class="topics">
+
+        {{if eq .Site.Params.ordersectionsby "title"}}
+          {{range .Site.Home.Sections.ByTitle}}
+          {{ template "section-tree-nav" dict "sect" . "currentnode" $currentNode "showvisitedlinks" $showvisitedlinks}}
+          {{end}}
+        {{else}}
+          {{range .Site.Home.Sections.ByWeight}}
+          {{ template "section-tree-nav" dict "sect" . "currentnode" $currentNode "showvisitedlinks" $showvisitedlinks}}
+          {{end}}
+        {{end}}
+    </ul>
+
+    {{ $disableShortcutsTitle := .Site.Params.DisableShortcutsTitle}}
+    {{with .Site.Menus.shortcuts}}
+      <section id="shortcuts">
+        <h3>{{ if not $disableShortcutsTitle}}{{ T "Shortcuts-Title"}}{{ end }}</h3>
+        <ul>
+          {{ range sort . "Weight"}}
+              <li>
+                  {{.Pre}}<a class="padding" href="{{.URL | absLangURL }}">{{safeHTML .Name}}</a>{{.Post}}
+              </li>
+          {{end}}
+        </ul>
+      </section>
+    {{end}}
 
     {{ if or .Site.IsMultiLingual $showvisitedlinks }}
-    <section>
+    <section id="prefooter">
+      <hr/>
       <ul>
       {{ if and .Site.IsMultiLingual (not .Site.Params.DisableLanguageSwitchingButton)}}
         <li>
-          <div class="select-style padding">
-          v <select id="select-language" onchange="location = this.value;">
+          <a class="padding">
+            <!--i class="fas fa-language fa-fw"></i-->
+            Version: 
+          <div class="select-style">
+            <select id="select-language" onchange="location = this.value;">
           {{ $siteLanguages := .Site.Languages}}
           {{ $pageLang := .Page.Lang}}
           {{ range .Page.AllTranslations }}
@@ -39,6 +84,7 @@
           </g>
         </svg>
         </div>
+        </a>
         </li>
       {{end}}
 
@@ -47,45 +93,7 @@
       {{ end }}
       </ul>
     </section>
-  {{ end }}
-
-    {{if not .Site.Params.disableSearch}}
-        {{ partial "search.html" . }}
-    {{end}}
-  </div>
-
-  {{if not .Site.Params.disableLandingPageButton }}
-    <section id="homelinks">
-      <ul>
-        <li>
-            <a class="padding" href='{{ (cond (and (ne .Site.Params.landingPageURL nil) (.Site.IsMultiLingual)) .Site.Params.landingPageURL "/") }}'>{{ safeHTML (cond (ne .Site.Params.landingPageName nil) .Site.Params.landingPageName "<i class='fas fa-home'></i> Home") }}</a>
-        </li>
-      </ul>
-    </section>
-  {{end}}
-
-    <div class="highlightable">
-    <ul class="topics">
-      {{range .Site.Home.Pages.ByTitle}}
-      {{ template "section-tree-nav" dict "sect" . "currentnode" $currentNode "showvisitedlinks" $showvisitedlinks}}
-      {{end}}
-    </ul>
-
-    {{ $disableShortcutsTitle := .Site.Params.DisableShortcutsTitle}}
-    {{with .Site.Menus.shortcuts}}
-      <section id="shortcuts">
-        <h3>{{ if not $disableShortcutsTitle}}{{ T "Shortcuts-Title"}}{{ end }}</h3>
-        <ul>
-          {{ range sort . "Weight"}}
-              <li>
-                  {{.Pre}}<a class="padding" href="{{.URL | absLangURL }}">{{safeHTML .Name}}</a>{{.Post}}
-              </li>
-          {{end}}
-        </ul>
-      </section>
-    {{end}}
-
-    
+    {{ end }}
     <section id="footer">
       {{ partial "menu-footer.html" . }}
     </section>
