--- a/templates/build.sh.j2
+++ b/templates/build.sh.j2
@@ -21,9 +21,11 @@ function clean() {
     [[ -d ./$1 ]] && rm -rf ./$1
     mkdir -p ./$1
   }
+{% if (build_docs) or (clean_only) %}
   clean_dir content
   clean_dir public
-{%- if clone %}
+{%- endif %}
+{%- if (clone) or (clean_only) %}
   clean_dir docs-uan
 {%- endif %}
   [[ -f uan_docs_build.log ]] && rm uan_docs_build.log
@@ -33,11 +35,10 @@ function clean() {
 clean
 
 function build () {
-  echo "Cloning into docs-uan..."
-
   mkdir -p ./docs-uan
   cd ./docs-uan
 {%- if clone %}
+  echo "Cloning into docs-uan..."
   pwd
   for release in ${RELEASES[@]}; do
     git clone --depth 1 -b v$release git@github.com:Cray-HPE/docs-uan.git ./$release
@@ -72,7 +73,9 @@ function build () {
   tee -a uan_docs_build.log
   docker-compose -f $THIS_DIR/compose/hugo_build.yml down
 }
+{% if (build_docs) and (not clean_only) %}
 build
+{%- endif %}
 
 function test_links() {
   echo "Build html pages with Hugo..."
@@ -87,6 +90,8 @@ function test_links() {
   # Tear it all down
   docker-compose -f $THIS_DIR/compose/test.yml down
 }
+{% if not clean_only %}
 test_links
+{%- endif %}
 
 cd $LAST_DIR
