--- a/templates/build.sh.j2
+++ b/templates/build.sh.j2
@@ -46,7 +46,7 @@ function build () {
     [[ -f $release/Changelog.md ]] && cp $release/Changelog.md $release/$DOCROOT
     echo "Copy top level index.md to $DOCROOT..."
     [[ -f $release/index.md  && ! -f $release/$DOCROOT/index.md ]] && cp $release/index.md $release/$DOCROOT
-    [[ -f $release/$DOCROOT/index.md ]] && sed -i .mdbak1 -r "s|\][(](\.\/)*($DOCROOT)*([A-Za-z0-9_\-]+)|\][(]\.\/\3|g" $release/$DOCROOT/index.md
+    [[ -f $release/$DOCROOT/index.md ]] && sed -i .mdbak1 -r "s|\][(]([\.\/])*($DOCROOT)*([A-Za-z0-9_\-]+)|\][(]\.\/\3|g" $release/$DOCROOT/index.md
     echo "Cleaning up unwanted md files..."
     for MD in ${UNWANTED_MD_LIST[@]}; do
         [[ -f $release/$DOCROOT/$MD ]] && rm $release/$DOCROOT/$MD
