--- a/docs/hugo/docs-uan/themes/hugo-theme-learn/layouts/partials/header.html
+++ b/docs/hugo/docs-uan/themes/hugo-theme-learn/layouts/partials/header.html
@@ -39,6 +39,7 @@
       {{ end }}
     </style>
     {{ partial "custom-header.html" . }}
+    {{ template "_internal/google_analytics.html" . }}
   </head>
   <body class="" data-url="{{ .RelPermalink }}">
     {{ partial "menu.html" . }}
