--- a/templates/config.toml.j2
+++ b/templates/config.toml.j2
@@ -14,7 +14,7 @@ collapsibleMenu = true
 disableNextPrev = true
 disableLandingPageButton = true
 disableBreadcrumb = false
-showVisitedLinks = true
+showVisitedLinks = false
 ordersectionsby = "weight"
 
 [languages]
